--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -7,6 +7,7 @@ dataSources:
     network: mainnet
     source:
       address: "0x6B175474E89094C44Da98b954EedeAC495271d0F"
+      startBlock: 8928158
       abi: Dai
     mapping:
       kind: ethereum/events
